--- a/source/index.html
+++ b/source/index.html
@@ -7,14 +7,14 @@
 <main class="main-container">
   <h1 class="visually-hidden">Магазин милых штук ручной работы для дома "Mishka"</h1>
   <section class="products">
-    <div class="products__container">
-      <h2 class="products__title">Милые штуки ручной работы для дома</h2>
-      <ul class="products__list">
-        <li class="products__item">
-          <a class="products__link products__link--icon_interior" href="#">Предметы интерьера</a>
+    <div class="page__centerer">
+      <h2 class="products__title heading">Милые штуки ручной работы для дома</h2>
+      <ul class="products-list products__list">
+        <li class="products-list__item">
+          <a class="products-list__link products-list__link--icon_interior" href="#">Предметы интерьера</a>
         </li>
-        <li class="products__item">
-          <a class="products__link products__link--icon_toy" href="#">Детские игрушки</a>
+        <li class="products-list__item">
+          <a class="products-list__link products-list__link--icon_toy" href="#">Детские игрушки</a>
         </li>
       </ul>
     </div>
@@ -23,8 +23,8 @@
     <div class="featured__container">
       <h2 class="visually-hidden">Описание</h2>
       <div class="featured__product product-card">
-        <h3 class="product-card__title">Вязаные корзинки</h3>
-        <span class="product-card__label">Товар недели</span>
+        <h3 class="product-card__title heading--level_2">Вязаные корзинки</h3>
+        <span class="product-card__label card-label">Товар недели</span>
         <p class="product-card__description">
           Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трёх размерах.
         </p>
