--- a/source/index.html
+++ b/source/index.html
@@ -77,7 +77,7 @@
         <blockquote class="quote__text">
           Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
         </blockquote>
-        <figcaption class="quote__author author">Анастасия Красильникова <cite class="author__cite">@misssssiskras</cite></figcaption>
+        <figcaption class="quote__author author">Анастасия Красильникова <span class="author__id author-id">@misssssiskras</span></figcaption>
       </figure>
       <p class="reviews__buttons button-reviews">
         <div class="button-reviews__slider slider-reviews">
@@ -93,11 +93,11 @@
     </div>
   </section>
   <article class="contacts">
-    <div class="contacts__container">
+    <div class="page__centerer">
     <h2 class="contacts__title">Контакты</h2>
     <address class="contacts__address address">
       <p class="address__email">e-mail:</p>
-      <a href="info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+      <a class="address__link link-address" href="info@mimimishkashop.ru">info@mimimishkashop.ru</a>
       <p class="address__title">адрес:</p>
       <p class="address__content">г. Санкт-Петербургул. Большая Конюшеннаяд. 19/8, офис 101</p>
     </address>
